Update whishList Icon - Store

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <dic class="article">
                         <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -158,7 +158,7 @@
                     <dic class="article">
                         <img src="img/pic2.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -168,7 +168,7 @@
                     <dic class="article">
                         <img src="img/pic15.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -178,7 +178,7 @@
                     <dic class="article">
                         <img src="img/pic16.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -188,7 +188,7 @@
                     <dic class="article">
                         <img src="img/pic5.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -200,7 +200,7 @@
                     <dic class="article">
                         <img src="img/pic6.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -210,7 +210,7 @@
                     <dic class="article">
                         <img src="img/pic22.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -220,7 +220,7 @@
                     <dic class="article">
                         <img src="img/pic8.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -230,7 +230,7 @@
                     <dic class="article">
                         <img src="img/pic25.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -240,7 +240,7 @@
                     <dic class="article">
                         <img src="img/pic18.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -252,7 +252,7 @@
                     <dic class="article">
                         <img src="img/pic11.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -262,7 +262,7 @@
                     <dic class="article">
                         <img src="img/pic24.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -272,7 +272,7 @@
                     <dic class="article">
                         <img src="img/pic13.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -282,7 +282,7 @@
                     <dic class="article">
                         <img src="img/pic14.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -292,7 +292,7 @@
                     <dic class="article">
                         <img src="img/pic37.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit.................................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
