Creating Signin & Create Account Forms

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </a>
         <section class="menuIcons">
             <ul>
-                <li><a href="#"><img class="icon icon--moon" src="img/moon_Icon.svg" alt=""></a></li>
+                <li><a href="#"><img class="icon iconMoon" src="img/moon_Icon.svg" alt=""></a></li>
                 <li><a href="views/sign_In.html"><img class="icon" src="img/user_Icon.svg" alt=""></a></li>
                 <li><a href="#"><img class="icon" src="img/whishlist_White_Icon.svg" alt=""></a></li>
                 <li><a href="#"><img class="icon" src="img/empty_Shopping_Cart.svg" alt=""></a></li>
