Update SocialMedia's GiftCard Section

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                                     <h3 class="subtitleGift">Gift Cards $100</h3>
                                     <div class="socialMedia">
                                         <img src="img/instagram_Black_Icon.svg" alt="" class="itemSocial">
-                                        <img src="img/youtube_black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/youtube_Black_Icon.svg" alt="" class="itemSocial">
                                         <img src="img/facebook_Black_Icon.svg" alt="" class="itemSocial">
                                         <img src="img/twitter_Black_Icon.svg" alt="" class="itemSocial">
                                         <img src="img/pinterest_Black_Icon.svg" alt="" class="itemSocial">
@@ -528,7 +528,7 @@
                                     <img src="img/brand_White.svg" id="icon" alt="...">
                                     <h3 class="subtitleGift">Gift Cards $200</h3> <div class="socialMedia">
                                         <img src="img/instagram_Black_Icon.svg" alt="" class="itemSocial">
-                                        <img src="img/youtube_black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/youtube_Black_Icon.svg" alt="" class="itemSocial">
                                         <img src="img/facebook_Black_Icon.svg" alt="" class="itemSocial">
                                         <img src="img/twitter_Black_Icon.svg" alt="" class="itemSocial">
                                         <img src="img/pinterest_Black_Icon.svg" alt="" class="itemSocial">
@@ -541,7 +541,7 @@
                                     <h3 class="subtitleGift">Gift Cards $500</h3>
                                     <div class="socialMedia">
                                         <img src="img/instagram_Black_Icon.svg" alt="" class="itemSocial">
-                                        <img src="img/youtube_black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/youtube_Black_Icon.svg" alt="" class="itemSocial">
                                         <img src="img/facebook_Black_Icon.svg" alt="" class="itemSocial">
                                         <img src="img/twitter_Black_Icon.svg" alt="" class="itemSocial">
                                         <img src="img/pinterest_Black_Icon.svg" alt="" class="itemSocial">
@@ -553,7 +553,7 @@
                                     <h3 class="subtitleGift">Gift Cards $1000</h3>
                                     <div class="socialMedia">
                                         <img src="img/instagram_Black_Icon.svg" alt="" class="itemSocial">
-                                        <img src="img/youtube_black_Icon.svg" alt="" class="itemSocial">
+                                        <img src="img/youtube_Black_Icon.svg" alt="" class="itemSocial">
                                         <img src="img/facebook_Black_Icon.svg" alt="" class="itemSocial">
                                         <img src="img/twitter_Black_Icon.svg" alt="" class="itemSocial">
                                         <img src="img/pinterest_Black_Icon.svg" alt="" class="itemSocial">
