--- a/index.html
+++ b/index.html
@@ -151,157 +151,157 @@
 
         <section class="bestSellers ">
             <h2 class="subtitle">Best sellers</h2>
-            <div class="sectionCard d-flex flex-row">
-                <article class="cardProducts m-2">
+            <div class="sectionCard d-flex flex-row gb-5">
+                <article class="cardProducts me-3">
                     <dic class="article">
                         <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="img/pic2.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="img/pic15.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="img/pic16.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts ms-3">
                     <dic class="article">
                         <img src="img/pic5.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
             </div>
-            <div class="sectionCard g-1 d-flex flex-row">
-                <article class="cardProducts m-2">
+            <div class="sectionCard g-1 d-flex flex-row my-5">
+                <article class="cardProducts me-3">
                     <dic class="article">
                         <img src="img/pic6.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="img/pic22.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="img/pic8.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="img/pic25.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts ms-3">
                     <dic class="article">
                         <img src="img/pic18.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
             </div>
-            <div class="sectionCard g-1 d-flex flex-row">
-                <article class="cardProducts m-2">
+            <div class="sectionCard g-1 d-flex flex-row mt-5">
+                <article class="cardProducts me-3">
                     <dic class="article">
                         <img src="img/pic11.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="img/pic24.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="img/pic13.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts mx-3">
                     <dic class="article">
                         <img src="img/pic14.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
                 </article>
-                <article class="cardProducts m-2">
+                <article class="cardProducts ms-3">
                     <dic class="article">
                         <img src="img/pic37.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
                             <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
                     </dic>
