--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <section class="top">
                 <img class="brand" src="img/skullLogo.svg" alt="Break a Leg brand">
                 <label for="menuSide">
-                    <img class="close" src="../img/close_Cross_White.svg" alt="Close icon">
+                    <img class="close" src="img/close_Cross_White.svg" alt="Close icon">
                 </label>
             </section>
             <section class="menu">
