Menu Whislist & Cart

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <dic class="article">
                         <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -166,7 +166,7 @@
                     <dic class="article">
                         <img src="img/pic2.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -176,7 +176,7 @@
                     <dic class="article">
                         <img src="img/pic15.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -186,7 +186,7 @@
                     <dic class="article">
                         <img src="img/pic16.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -196,7 +196,7 @@
                     <dic class="article">
                         <img src="img/pic5.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -208,7 +208,7 @@
                     <dic class="article">
                         <img src="img/pic6.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -218,7 +218,7 @@
                     <dic class="article">
                         <img src="img/pic22.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -228,7 +228,7 @@
                     <dic class="article">
                         <img src="img/pic8.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -238,7 +238,7 @@
                     <dic class="article">
                         <img src="img/pic25.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -248,7 +248,7 @@
                     <dic class="article">
                         <img src="img/pic18.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -260,7 +260,7 @@
                     <dic class="article">
                         <img src="img/pic11.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -270,7 +270,7 @@
                     <dic class="article">
                         <img src="img/pic24.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -280,7 +280,7 @@
                     <dic class="article">
                         <img src="img/pic13.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -290,7 +290,7 @@
                     <dic class="article">
                         <img src="img/pic14.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
@@ -300,7 +300,7 @@
                     <dic class="article">
                         <img src="img/pic37.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/whishlist_Icon.svg" alt="Heart icon">
+                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
                             <a href="views/store.html" class="linkStore">Add to cart</a>
                         </div>
