Updatin Filter & Cart Menu

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </article>
         </section>
 
-        <!-- Cart -->
+        <!-- My Cart -->
 
         <input id="cart" type="checkbox">
         <section class="sectionShop">
