--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     <li><a href="index.html" class="link">Home</a></li>
                     <li><a href="views/store.html" class="link">Store</a></li>
                     <li><a href="index.html#giftCards" class="link">Gift cards</a></li>
+                    <li><a href="views/show_Room.html" class="link">Show Room</a></li>
                 </ul>
             </section>
             <section class="contactUs">
