--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
                         <a class="ctaDiscount" href="index.html#getOff">Discount</a>
                         <a class="ctaNewArrivals" href="index.html#newArrivals" >New Arrivals</a>
                     </div>
-                    <a class="ctaShowRoom" href="views/show_Room.html">"Don't forget to visit our showroom to check out the new outfits!!!" 👈
-                    </a>
+                    <p class="promo">"Don't forget to visit our showroom to check out
+                        <a class="ctaShowRoom" href="views/show_Room.html"> new outfits!!!"</a> 👈
+                    </p>
                 </article>
             </div>
             <img src="img/laptop1.webp" alt="Laptop Image" class="laptop">
