--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             </div>
         </section>
 
-        <!-- WhishList -->
+        <!-- WishList -->
 
         <input type="checkbox" id="wishlistSide">
         <section class="sectionWishlist">
@@ -264,18 +264,18 @@
             </label>
                 <nav class="menuWishlist">
                     <div class="choiceWishlist">
-                        <h3 class="wishlistWord">WhishList</h3>
+                        <h3 class="wishlistWord">WishList</h3>
                         <div class="wish">
                             <article class="category">
                                 <h3 class="titleWishlist">Item</h3>
                                 <h3 class="titleWishlist">Pricing</h3>
-                                <h3 class="titleWishlist">Whish</h3>
+                                <h3 class="titleWishlist">Wish</h3>
                             </article>
                             <article class="wishlist">
                                 <div class="blockProduct">
                                     <img class="itemProduct" src="img/pic24.webp" alt="Product pic">
                                     <div class="description">
-                                        <p class="price">$499</p>
+                                        <p class="wishPrice">$499</p>
                                         <div class="icons">
                                             <img src="img/trash_Icon.svg" alt="Trash icon">
                                             <img src="img/edit_Icon.svg" alt="Edit icon">
@@ -288,7 +288,7 @@
                                 <div class="blockProduct">
                                     <img class="itemProduct" src="img/pic25.webp" alt="Product pic">
                                     <div class="description">
-                                        <p class="price">$499</p>
+                                        <p class="wishPrice">$499</p>
                                         <div class="icons">
                                             <img src="img/trash_Icon.svg" alt="Trash icon">
                                             <img src="img/edit_Icon.svg" alt="Edit icon">
@@ -477,7 +477,7 @@
 
         <!-- New Arrivals -->
 
-        <section class="newArrivals" id="newArrivals">
+        <section class="newArrivals">
             <h2 class="subtitle">New Arrivals</h2>
             <div class="sectionCard d-flex flex-direction-row">
                 <article class="cardProducts m-0">
