--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <h2 class="subtitle">¡Where your passion is just beginning!</h2>
                     <div class="cta">
                         <a class="ctaDiscount" href="index.html#getOff">Discount</a>
-                        <a class="ctaNewArrivals" href="index.html#newArrivals" >New Arrivals</a>
+                        <a class="ctaNewArrivals" href="index.html#newArrivalsUno" >New Arrivals</a>
                     </div>
                     <p class="promo">"Don't forget to visit our showroom to check out
                         <a class="ctaShowRoom" href="views/show_Room.html"> new outfits!!!"</a> 👈
@@ -477,7 +477,7 @@
 
         <!-- New Arrivals -->
 
-        <section class="newArrivals">
+        <section class="newArrivals" id="newArrivalsUno">
             <h2 class="subtitle">New Arrivals</h2>
             <div class="sectionCard d-flex flex-direction-row">
                 <article class="cardProducts m-0">
