--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
             <img class="raccoon" src="img/logo_Raccoon.svg" alt="Raccoon brand">
             <div class="developer">
                 <p>Developed and made with 💖 by Diego Marin </p>
-                <p>© 2023 <span class="raccoon">Raccoon</span>. All rights reserved.</p>
+                <p> | © 2023 | <span class="raccoon"> Raccoon </span>. All rights reserved |</p>
                 <i class="em em-flag-co" aria-role="presentation" aria-label="Colombia Flag"></i>
                 <i class="em em-flag-ca" aria-role="presentation" aria-label="Canada Flag"></i>
             </div>
