Fixing sizes socialMedia & brandRaccoon

--- a/index.html
+++ b/index.html
@@ -144,13 +144,16 @@
 
         <section class="skullSocialMedia">
             <article class="socialMedia">
-                <img src="img/skull.svg" alt="" class="skullIcon">
+                <input type="checkbox" id="socialSkull">
+                <label for="socialSkull" class="label">
+                    <img src="../img/skull.svg" alt="" class="skullIcon">
+                </label>
                 <ul>
-                    <li><a href="https://www.instagram.com/" target="_blank" class="item"><img src="img/instagram.svg" alt="" class="itemSocial"></a></li>
-                    <li><a href="https://www.youtube.com/" target="_blank" class="item"><img src="img/youtube.svg" alt="" class="itemSocial"></a></li>
-                    <li><a href="https://www.facebook.com/" target="_blank" class="item"><img src="img/facebook.svg" alt="" class="itemSocial"></a></li>
-                    <li><a href="https://twitter.com/?lang=es" target="_blank" class="item"><img src="img/twitter.svg" alt="" class="itemSocial"></a></li>
-                    <li><a href="https://co.pinterest.com/" target="_blank" class="item"><img src="img/pinterest.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.instagram.com/" target="_blank" class="item"><img src="../img/instagram.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.youtube.com/" target="_blank" class="item"><img src="../img/youtube.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.facebook.com/" target="_blank" class="item"><img src="../img/facebook.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://twitter.com/?lang=es" target="_blank" class="item"><img src="../img/twitter.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://co.pinterest.com/" target="_blank" class="item"><img src="../img/pinterest.svg" alt="" class="itemSocial"></a></li>
                 </ul>
             </article>
         </section>
@@ -774,7 +777,7 @@
             <img class="raccoon" src="img/logo_Raccoon.svg" alt="Raccoon brand">
             <div class="developer">
                 <p>Developed and made with 💖 by Diego Marin </p>
-                <p> | © 2023 | <span class="raccoon"> Raccoon </span>. All rights reserved |</p>
+                <p> | © 2023 | <span class="raccoonBrand"> Raccoon </span>. All rights reserved |</p>
                 <i class="em em-flag-co" aria-role="presentation" aria-label="Colombia Flag"></i>
                 <i class="em em-flag-ca" aria-role="presentation" aria-label="Canada Flag"></i>
             </div>
