--- a/index.html
+++ b/index.html
@@ -120,18 +120,6 @@
             <img src="img/laptop1.webp" alt="Laptop Image" class="laptop">
         </section>
 
-        <!-- <section class="heroSection">
-            <article class="info">
-                <h1 class="break">Break a Leg</h1>
-                <h2 class="sentence">Where your passion is just beginning!</h2>
-                <div class="cta">
-                    <a href="" class="ctaDiscount">Discount</a>
-                    <a href="" class="newArrivals">New arrivals</a>
-                </div>
-            </article>
-            <img src="img/laptop1.webp" alt="Laptop Image" class="laptop">
-        </section> -->
-
         <!-- ArrowUp -->
 
         <section class="arrowUp">
@@ -168,7 +156,7 @@
             </article>
         </section>
 
-        <!-- My Cart -->
+        <!-- ShoppingCart -->
 
         <input id="cart" type="checkbox">
         <section class="sectionShop">
@@ -186,97 +174,55 @@
                                 <h3 class="titleCartlist">Quantity</h3>
                                 <h3 class="titleCartlist">Total</h3>
                             </article>
-                            <article class="cartlist">
-                                    <img class="itemProduct" src="img/pic24.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="price">$499</p>
-                                        <div class="icons">
-                                            <img src="img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="img/edit_Icon.svg" alt="Edit icon">
+                            <article class="containerArticles">
+                                <!-- <article class="cartlist">
+                                        <img class="itemProduct" src="../img/pic24.webp" alt="Product pic">
+                                        <div class="description">
+                                            <p class="price">$499</p>
+                                            <div class="icons">
+                                                <img src="../img/trash_Icon.svg" alt="Trash icon">
+                                                <img src="../img/edit_Icon.svg" alt="Edit icon">
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="itemNumber">
-                                        <label for="quantity"></label>
-                                        <input type="number" id="quantity" name="quantity" min="1" max="5" value="0" >
-                                    </div>
-                                    <p class="total">$499</p>
-                            </article>
-                            <article class="cartlist">
-                                    <img class="itemProduct" src="img/pic25.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="price">$499</p>
-                                        <div class="icons">
-                                            <img src="img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="img/edit_Icon.svg" alt="Edit icon">
+                                        <div class="itemNumber">
+                                            <label for="quantity"></label>
+                                            <input type="number" id="quantity" name="quantity" min="1" max="5" value="0" >
                                         </div>
-                                    </div>
-                                    <div class="itemNumber">
-                                        <label for="quantity"></label>
-                                        <input type="number" id="quantity" name="quantity" min="1" max="5" value="0">
-                                    </div>
-                                    <p class="total">$499</p>
+                                        <p class="total">$499</p>
+                                </article> -->
                             </article>
-                            <article class="cartlist">
-                                    <img class="itemProduct" src="img/pic29.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="price">$499</p>
-                                        <div class="icons">
-                                            <img src="img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="img/edit_Icon.svg" alt="Edit icon">
-                                        </div>
-                                    </div>
-                                    <div class="itemNumber">
-                                        <label for="quantity"></label>
-                                        <input type="number" id="quantity" name="quantity" min="1" max="5" value="0">
-                                    </div>
-                                    <p class="total">$499</p>
-                            </article>
-                            <article class="cartlist">
-                                <img class="itemProduct" src="img/pic22.webp" alt="Product pic">
-                                <div class="description">
-                                    <p class="price">$499</p>
-                                    <div class="icons">
-                                        <img src="img/trash_Icon.svg" alt="Trash icon">
-                                        <img src="img/edit_Icon.svg" alt="Edit icon">
-                                    </div>
-                                </div>
-                                <div class="itemNumber">
-                                    <label for="quantity"></label>
-                                    <input type="number" id="quantity" name="quantity" min="1" max="5" value="0">
-                                </div>
-                                <p class="total">$499</p>
-                        </article>
                         </div>
                     </div>
                     <div class="outcomeCard">
-                        <article class="outcome">
+                        <!-- <article class="outcome">
                             <p class="shipping">Shipping<span>$00</span></p>
                             <p class="discount">Discount 25%<span>$374</span></p>
                             <p class="total">Total<span>$1122</span></p>
-                        </article>
+                        </article> -->
                         <button class="btnCheckout">Secure checkout</button>
                     </div>
                 </nav>
             </div>
         </section>
 
-        <!-- WishList -->
+        <!-- WhishList -->
 
         <input type="checkbox" id="wishlistSide">
         <section class="sectionWishlist">
             <label for="wishlistSide" class="wishHeadLine">
                 <img class="closeCross" src="img/close_Cross.svg" alt="Close cross icon">
             </label>
-                <nav class="menuWishlist">
-                    <div class="choiceWishlist">
-                        <h3 class="wishlistWord">WishList</h3>
-                        <div class="wish">
-                            <article class="category">
-                                <h3 class="titleWishlist">Item</h3>
-                                <h3 class="titleWishlist">Pricing</h3>
-                                <h3 class="titleWishlist">Wish</h3>
-                            </article>
-                            <article class="wishlist">
+            <nav class="menuWishlist">
+                <div class="choiceWishlist">
+                    <h3 class="wishlistWord">WishList</h3>
+                    <div class="wish">
+                        <article class="category">
+                            <h3 class="titleWishlist">Item</h3>
+                            <h3 class="titleWishlist">Pricing</h3>
+                            <h3 class="titleWishlist">Wish</h3>
+                        </article>
+                        <article class="containerWishlist">
+                            <!-- <article class="wishlist">
                                 <div class="blockProduct">
                                     <img class="itemProduct" src="img/pic24.webp" alt="Product pic">
                                     <div class="description">
@@ -288,30 +234,19 @@
                                     </div>
                                     <img class="itemWishlist" src="img/wishlist_Icon.svg" alt="Wishlist icon">
                                 </div>
-                            </article>
-                            <article class="wishlist">
-                                <div class="blockProduct">
-                                    <img class="itemProduct" src="img/pic25.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="wishPrice">$499</p>
-                                        <div class="icons">
-                                            <img src="img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="img/edit_Icon.svg" alt="Edit icon">
-                                        </div>
-                                    </div>
-                                    <img class="itemWishlist" src="img/wishlist_Icon.svg" alt="Wishlist icon">
-                                </div>
-                            </article>
-                        </div>
+                            </article> -->
+
+                        </article>
                     </div>
-                </nav>
+                </div>
+            </nav>
         </section>
 
         <!-- Best Sellers -->
 
         <section class="bestSellers ">
             <h2 class="subtitle">Best sellers</h2>
-            <div class="sectionCard d-flex flex-row gb-5">
+            <div class="sectionCardBlock d-flex flex-row gb-5">
                 <article class="cardProducts me-3">
                     <dic class="article">
                         <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
@@ -363,7 +298,7 @@
                     </dic>
                 </article>
             </div>
-            <div class="sectionCard g-1 d-flex flex-row my-5">
+            <div class="sectionCardBlock g-1 d-flex flex-row my-5">
                 <article class="cardProducts me-3">
                     <dic class="article">
                         <img src="img/pic6.webp" alt="Outfit Image" class="outFit">
@@ -415,7 +350,7 @@
                     </dic>
                 </article>
             </div>
-            <div class="sectionCard g-1 d-flex flex-row mt-5">
+            <div class="sectionCardBlock g-1 d-flex flex-row mt-5">
                 <article class="cardProducts me-3">
                     <dic class="article">
                         <img src="img/pic11.webp" alt="Outfit Image" class="outFit">
@@ -484,7 +419,7 @@
 
         <section class="newArrivals" id="newArrivalsUno">
             <h2 class="subtitle">New Arrivals</h2>
-            <div class="sectionCard d-flex flex-direction-row">
+            <div class="sectionCardContainer d-flex flex-direction-row">
                 <article class="cardProducts m-0">
                     <div class="article1">
                         <label for="new1" class="fadeAway">
@@ -551,7 +486,7 @@
                     </div>
                 </article>
             </div>
-            <div class="sectionCard d-flex flex-direction-row">
+            <div class="sectionCardContainer d-flex flex-direction-row">
                 <article class="cardProducts m-0">
                     <div class="article6">
                         <label for="new6" class="fadeAway">
@@ -791,7 +726,12 @@
 
     <!-- JS -->
 
-    <script src="main.js"></script>
+    <script src="cart.js"></script>
+    <script src="store.js"></script>
+    <script src="filter.js"></script>
+    <script src="wishlist.js"></script>
+
+    <!-- <script src="main.js"></script> -->
 
 </body>
 </html>
