--- a/index.html
+++ b/index.html
@@ -186,7 +186,6 @@
                                         </div>
                                         <div class="itemNumber">
                                             <label for="quantity"></label>
-                                            <input type="number" id="quantity" name="quantity" min="1" max="5" value="0" >
                                         </div>
                                         <p class="total">$499</p>
                                 </article> -->
@@ -194,11 +193,11 @@
                         </div>
                     </div>
                     <div class="outcomeCard">
-                        <!-- <article class="outcome">
+                        <article class="outcome">
                             <p class="shipping">Shipping<span>$00</span></p>
-                            <p class="discount">Discount 25%<span>$374</span></p>
-                            <p class="total">Total<span>$1122</span></p>
-                        </article> -->
+                            <p class="discount">Discount 25%<span>$00</span></p>
+                            <p class="total">Total<span>$00</span></p>
+                        </article>
                         <button class="btnCheckout">Secure checkout</button>
                     </div>
                 </nav>
